[gd_scene load_steps=5 format=3 uid="uid://bn5ogomcqlvd1"]

[ext_resource type="Script" path="res://Scenes/IndustryPanel.gd" id="1_7lxmv"]

[sub_resource type="Gradient" id="Gradient_e8cm1"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5ftde"]
gradient = SubResource("Gradient_e8cm1")
fill_from = Vector2(1, 0)
fill_to = Vector2(1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_t0d4n"]
gradient = SubResource("Gradient_e8cm1")
fill_from = Vector2(1, 1)

[node name="IndustryPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 171.0
offset_bottom = 145.0
scale = Vector2(0.8, 0.8)
script = ExtResource("1_7lxmv")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 170.0
offset_bottom = 125.0

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_right = 51.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 12
text = "Name"

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -71.0
offset_right = -24.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 12
text = "Lv: 00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProductionProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -83.5
offset_top = -53.0
offset_right = 82.5
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
show_percentage = false

[node name="Label" type="Label" parent="ProductionProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -13.5
offset_right = 29.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Label" parent="ProductionProgressBar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -74.5
offset_top = -20.0
offset_right = 74.5
offset_bottom = 3.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 12
text = "Production Process"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IngredientProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -83.5
offset_top = -101.0
offset_right = 82.5
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 0
show_percentage = false

[node name="Label" type="Label" parent="IngredientProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -13.5
offset_right = 29.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Label" parent="IngredientProgressBar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -74.0
offset_top = -20.0
offset_right = 75.0
offset_bottom = 3.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 12
text = "Ingredient type"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IngredientProgressBar2" type="ProgressBar" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -83.5
offset_top = 36.0
offset_right = 82.5
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 0
show_percentage = false

[node name="Label" type="Label" parent="IngredientProgressBar2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -13.5
offset_right = 29.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Label" parent="IngredientProgressBar2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -74.0
offset_top = -20.0
offset_right = 75.0
offset_bottom = 3.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 12
text = "Ingredient type"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IngredientProgressBar3" type="ProgressBar" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -83.5
offset_top = 78.0
offset_right = 82.5
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 0
show_percentage = false

[node name="Label" type="Label" parent="IngredientProgressBar3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -13.5
offset_right = 29.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Label" parent="IngredientProgressBar3"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -74.0
offset_top = -20.0
offset_right = 75.0
offset_bottom = 3.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 12
text = "Ingredient type"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IncreaseLevelButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 148.75
offset_top = 1.25
offset_right = 168.75
offset_bottom = 22.25
texture_normal = SubResource("GradientTexture2D_5ftde")
ignore_texture_size = true
stretch_mode = 0

[node name="DecreaseLevelButton" type="TextureButton" parent="."]
offset_left = 77.5
offset_right = 97.5
offset_bottom = 21.0
texture_normal = SubResource("GradientTexture2D_t0d4n")
ignore_texture_size = true
stretch_mode = 0
